--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,5 @@
 html {
-  background: url('../assets/background.jpg') no-repeat center center fixed;
+  background: url('./assets/background.jpg') no-repeat center center fixed;
   /* background: url('https://github.com/Thinkful-Ed/js-dev-final-capstone-starter/blob/main/assets/background.png?raw=true') no-repeat center center fixed; */
   box-sizing: border-box;
   -webkit-background-size: cover;
