--- a/src/styles.css
+++ b/src/styles.css
@@ -14,23 +14,66 @@ h1 {
   text-align: center;
   font-size: 90px;
   font-family: "Comic Sans MS", "Comic Sans", cursive;
-                                                
-  color: rgb(219, 37, 37);
-  -webkit-text-stroke: 2px black;
+  margin-top: 70px;              
+  color: black;
+  -webkit-text-stroke: 5px rgb(219, 37, 37);;
 }
 
 h2 {
   text-align: center;
-  font-size: 40px;
+  font-size: 34px;
   color: rgb(255, 64, 0);
   -webkit-text-stroke: 1px black;
+}
+
+h3 {
+  text-align: center;
+  font-size: 30px;
+  color: rgb(255, 64, 0);
+  -webkit-text-stroke: 1px black;
+}
+
+hr {
+  height: 3px;
+  background-color: #d00000;
+  border: none;
+}
+
+p {
+  text-align: right;
+  color: bisque;
+  font-size: 20px;
+}
+
+.level {
+  text-align: center;
+  font-size: 28px;
+  background-color: #373f47;
+  color: #d5896f;
+}
+
+.active {
+  font-weight: bold;
+  background-color: black;
+  color: red;
+}
+
+.toggle {
+  text-align:center;
+}
+
+.lenar {
+  font-family: 'Permanent Marker', cursive;
+  color: #d00000;
+  text-decoration: none;
+  font-size: 20px;
 }
 
 #start {
     text-align: center;
     font-size: 30px;
-    background-color: black;
-    color: red;
+    background-color: red;
+    color: black;
 }
 
 #timer{
@@ -43,6 +86,11 @@ h2 {
   display: flex;
   flex-wrap: wrap;
   margin: 0 auto;
+  padding: 30px;
+  background-color: #00000080;
+  border-radius: 10px;
+  border-color: #00000080;
+  border-width: 3px;
   /*cursor: url('./assets/mallet.png'), pointer;*/
 }
 
@@ -82,4 +130,28 @@ h2 {
 .hole.show .mole {
   top: 0;
   /*transform: scale(1.1);*/
+}
+
+.gameboard {
+  padding: 50px;
+  margin: 70px;
+  background-color: #00000080;
+  border-radius: 10px;
+  border-color: #00000080;
+  border-width: 3px;
+}
+
+.dashboard {
+  width: 350px;
+  background-color: #00000080;
+  border-radius: 10px;
+  border-color: #00000080;
+  border-width: 5px;
+  padding: 10px 50px;
+}
+
+.group {
+  display: flex;
+  justify-content: space-evenly;
+  /* align-items: center; */
 }
